--- a/html.html
+++ b/html.html
@@ -12,6 +12,7 @@
 	<script src="./js/html5shiv.js"></script>
 	<![endif]-->
 
+	<link rel="shortcut icon" type="image/x-icon" href="./images/icon.ico" mce_href="./images/icon.ico" >
 	<!-- link 链接到样式 外部引用-->
 	<link rel="stylesheet" type="text/css" href="./css/html.css"/>
 	<!-- js脚本-->
